# raytracer

./: CMakeLists.txt  README.md  cannon.cpp  clock.cpp  sphere2d.cpp  tests.cpp
include/: Camera.h  Canvas.h  Color.h  Computations.h  Constants.h  Environment.h  Intersection.h  Lighting.h  Material.h  Matrix.h  Pattern.h  Plane.h  Point.h  PointLight.h  Projectile.h  Ray.h  Shape.h  Sphere.h  TestShape.h  Transformations.h  Tuple.h  Utils.h  Vector.h  World.h
src/: SimplePlane.cpp  SimpleScene.cpp  cannon.cpp  clock.cpp  main.cpp  sphere2d.cpp
tests/include/: TestUtils.h
tests/src/: CameraTests.cpp  IntersectionTests.cpp  MaterialsTests.cpp  PatternTests.cpp  PlaneTests.cpp  ShapeTests.cpp  SphereTests.cpp  WorldTests.cpp  tests.cpp
